2010-03-28  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13273: Caching framework sub-select is slow because mysql does not use indexes on outer query

2010-03-27  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12794: t3lib_TStemplate::getFileName() handles path starting with media/ as magic
	* Fixed bug #13590: felogin adds field felogin_forgotHash to tca but does not add field to database (Thanks to Fabrizio Branca)

2010-03-26  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13775: Missing <tr> in "Admin Tools -> User Admin" (thanks to Stephan Kellermayr)

2010-03-26  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13813: Using ExtJS with debug should also use debug-files of adapter

2010-03-26  Ernesto Baschny  <ernst@cron-it.de>

	* Follow-up to #13554: Make the code in line with follow-up to #13739

2010-03-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13595: loginform has <table> stdWrap, but <div>s inside [css styled content] (Thanks to Susanne Moog)
	* Fixed bug #13792: Double semicolon in css styled content (Thanks to Susanne Moog)
	* Fixed bug #13681: Improve performance of t3lib_div::revExplode (Thanks to Nikolas Hagelstein)

2010-03-26  Francois Suter  <francois@typo3.org>

	* Fixed bug #13716: includeCSS changed behavior, must default to media="all" (thanks to internezzo ag)
	* Fixed bug #13678: Bug: htmlmail send mail twice if cc recipient is set (thanks to Robert Heel)
	* Follow-up to #13678: Remove cleanup of recipient_copy which is now unused

2010-03-25  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #13901: GIFBULDER generates same picture twice (in typo3temp/GB) (thanks to Vladimir Podkovanov)
	* Follow-up to #13739: Make the clickmenu work for the case when "Substitute Mount Point" is not set

2010-03-25  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to bug #11239: typolink addQueryString.exclude does not support arrays, main patch for tslib_content